--- a/FinalProject_OOD_2022/FinalProject_OOD_2022.csproj
+++ b/FinalProject_OOD_2022/FinalProject_OOD_2022.csproj
@@ -144,6 +144,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="images\illustration-funny-cartoon-dogs-cats_112554-297.webp" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -164,6 +165,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ownerForms\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\cover.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.4.3.0\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.4.3.0\build\MaterialDesignThemes.targets')" />
